feat: ajuste packages